[package]
name = "rmud-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
tokio = { version = "1.35.1", features = ["full"] }
tui-textarea = "0.4.0"
